[gd_scene load_steps=5 format=3 uid="uid://ch0x40qo6s5rt"]

[ext_resource type="PackedScene" uid="uid://ll5oqpyb1htl" path="res://src/ui_elements/screen/screen.tscn" id="1_77jpu"]
[ext_resource type="Theme" uid="uid://8b0nu8iueg0s" path="res://assets/resources/themes/theme_ui.tres" id="2_cw552"]
[ext_resource type="Script" uid="uid://dolmgvyknfa40" path="res://src/screens/menu/join_menu/join_menu.gd" id="2_ore20"]
[ext_resource type="PackedScene" uid="uid://c36lew5uiwsgp" path="res://src/ui_elements/floating_button/Floating_button.tscn" id="3_u17jk"]

[node name="JoinMenu" instance=ExtResource("1_77jpu")]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2_ore20")

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(175, 166)
theme_override_constants/separation = 24

[node name="Nickname" type="LineEdit" parent="VBoxContainer" index="0"]
layout_mode = 2
theme = ExtResource("2_cw552")
placeholder_text = "Nickname"
caret_blink = true

[node name="Separator3" type="Control" parent="VBoxContainer" index="1"]
layout_mode = 2

[node name="IP" type="LineEdit" parent="VBoxContainer" index="2"]
layout_mode = 2
theme = ExtResource("2_cw552")
placeholder_text = "IP do servidor"
caret_blink = true

[node name="Separator" type="Control" parent="VBoxContainer" index="3"]
layout_mode = 2

[node name="Join" parent="VBoxContainer" index="4" instance=ExtResource("3_u17jk")]
layout_mode = 2
text = "Entrar"

[node name="Separator2" type="Control" parent="VBoxContainer" index="5"]
layout_mode = 2

[node name="Back" parent="VBoxContainer" index="6" instance=ExtResource("3_u17jk")]
layout_mode = 2
text = "Voltar"

[connection signal="resized" from="." to="." method="_on_resized"]
[connection signal="text_changed" from="VBoxContainer/Nickname" to="." method="_on_nickname_text_changed"]
[connection signal="text_changed" from="VBoxContainer/IP" to="." method="_on_ip_text_changed"]
[connection signal="pressed" from="VBoxContainer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
